--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,8 @@ body {
 
 .top-buffer { margin-top:20px; }
 
-.bottom-buffer { margin-bottom:50px; }
+.bottom-buffer { margin-bottom:50px;
+margin-top:15px;}
 
 .medium-bottom-buffer { margin-bottom:15px; }
 
